--- a/kernel/memory/13. 回收页面/1. LRU链表.md
+++ b/kernel/memory/13. 回收页面/1. LRU链表.md
@@ -68,3 +68,38 @@ struct pagevec {
 ```
 
 \_Iru_cache_add()函数第5行代码判断页向量pagevec是否还有空间，如果没有空间，那么首先调用\__pagevec_lru_add()函数把原有的page加入到LRU链表中，然后把新页面添加到页向量pagevec中。
+
+```
+static void __pagevec_lru_add_fn(struct page *page, struct lruvec *lruvec,
+				 void *arg)
+{
+	int file = page_is_file_cache(page);
+	int active = PageActive(page);
+	enum lru_list lru = page_lru(page);
+	SetPageLRU(page);
+	add_page_to_lru_list(page, lruvec, lru);
+}
+static __always_inline void add_page_to_lru_list(struct page *page,
+				struct lruvec *lruvec, enum lru_list lru)
+{
+	int nr_pages = hpage_nr_pages(page);
+	list_add(&page->lru, &lruvec->lists[lru]);
+}
+```
+
+从add_page_to_lru_list()可以看到，一个page 最终通过list_add()函数来加入LRU链表，list_add()会将成员添加到链表头。
+
+Iru_to_page(&lru_list)和list_del(&page->lru)函数组合实现从LRU链表摘取页面，其中，Iru_to_page()的实现如下：
+
+```
+[mm/vmscan.c]
+#define lru_to_page(_head)(list_entry((_head)->prev,struct page,lru))
+```
+
+lru_to_page()使用了head->prev，从链表的末尾摘取页面，因此，LRU链表实现了先进先出（FIFO）算法。最先进入LRU链表的页面，在LRU中的时间会越长，老化时间也越长。
+
+在系统运行过程中，页面总是在活跃LRU链表和不活跃LRU链表之间转移，不是每次访问内存页面都会发生这种转移。而是发生的时间间隔比较长，随着时间的推移，导致一种热平衡，最不常用的页面将慢慢移动到不活跃LRU链表的末尾，这些页面正是页面回收中最合适的候选者。
+
+经典LRU链表算法如图2.27所示。
+
+![经典LRU链表算法](picture/经典LRU链表算法.png)
