--- a/kernel/memory/13. 回收页面/1. LRU链表.md
+++ b/kernel/memory/13. 回收页面/1. LRU链表.md
@@ -103,3 +103,103 @@ lru_to_page()使用了head->prev，从链表的末尾摘取页面，因此，LRU
 经典LRU链表算法如图2.27所示。
 
 ![经典LRU链表算法](picture/经典LRU链表算法.png)
+
+## 2.第二次机会法
+
+第二次机会法（second chance）在经典LRU算法基础上做了一些改进。在经典LRU链表（FIFO)中，新产生的页面加入到LRU链表的开头，将LRU链表中现存的页面向后移动了一个位置。当系统内存短缺时，LRU链表尾部的页面将会离开并被换出。当系统再需要这些页面时，这些页面会重新置于LRU链表的开头。显然这个设计不是很巧妙，在换出页面时，没有考虑该页面的使用情况是频繁使用，还是很少使用。也就是说，频繁使用的页面依然会因为在LRU链表末尾而被换出。
+
+第二次机会算法的改进是为了避免把经常使用的页面置换出去。当选择置换页面时，依然和LRU算法一样，选择最早置入链表的页面，即在链表末尾的页面。二次机会法设置了一个访问状态位（硬件控制的比特位），所以要检查页面的访问位。如果访问位是0，就淘汰这页面；如果访问位是1，就给它第二次机会，并选择下一个页面来换出。当该页面得到第二次机会时，它的访问位被清0，如果该页在此期间再次被访问过，则访问位置为1。这样给了第二次机会的页面将不会被淘汰，直至所有其他页面被淘汰过（或者也给了第二次机会）。因此，如果一个页面经常被使用，其访问位总保持为1，它一直不会被淘汰出去。
+
+
+
+
+
+Linux 内核使用PG_active和PG_referenced这两个标志位来实现第二次机会法。PG_active表示该页是否活跃，PG_referenced表示该页是否被引用过，主要函数如下。
+
+- mark_page_accessed()。
+
+- page_referenced()。
+
+- page_check_references();
+
+  
+
+## 3. mark_page_accessed()
+
+下面来看mark_page_accessed()函数。
+
+```
+void mark_page_accessed(struct page *page)
+{
+	if (!PageActive(page) && !PageUnevictable(page) &&
+			PageReferenced(page)) {
+		if (PageLRU(page))
+			activate_page(page);
+		else
+			__lru_cache_activate_page(page);
+		ClearPageReferenced(page);
+		if (page_is_file_cache(page))
+			workingset_activation(page);
+	} else if (!PageReferenced(page)) {
+		SetPageReferenced(page);
+	}
+}
+```
+
+（1）如果PG_active=0&&PG_referenced=1,则：
+
+- 把该页加入活跃LRU，并设置PG_active=1；
+- 清PG_referenced标志位。
+
+（2）如果PG_referenced=0，则：
+
+- 设置PG_referenced标志位。
+
+
+
+## 4. page_check_reference()
+
+下面来看page_check_references()函数。
+
+```
+[mm/vmscan.c]
+static enum page_references page_check_references(struct page *page,
+						  struct scan_control *sc)
+{
+	int referenced_ptes, referenced_page;
+	unsigned long vm_flags;
+
+	referenced_ptes = page_referenced(page, 1, sc->target_mem_cgroup,
+					  &vm_flags);
+	referenced_page = TestClearPageReferenced(page);
+
+	if (vm_flags & VM_LOCKED)
+		return PAGEREF_RECLAIM;
+
+	if (referenced_ptes) {
+		if (PageSwapBacked(page))
+			return PAGEREF_ACTIVATE;
+			
+		SetPageReferenced(page);
+
+		if (referenced_page || referenced_ptes > 1)
+			return PAGEREF_ACTIVATE;
+
+		/*
+		 * Activate file-backed executable pages after first usage.
+		 */
+		if (vm_flags & VM_EXEC)
+			return PAGEREF_ACTIVATE;
+
+		return PAGEREF_KEEP;
+	}
+
+	/* Reclaim if clean, defer dirty pages to writeback */
+	if (referenced_page && !PageSwapBacked(page))
+		return PAGEREF_RECLAIM_CLEAN;
+
+	return PAGEREF_RECLAIM;
+}
+```
+
+在扫描不活跃LRU链表时，page_check_references()会被调用，返回值是一个page_references的枚举类型。PAGEREF_ACTIVATE表示该页面会迁移到活跃链表，PAGEREF_KEEP 表示会继续保留在不活跃链表中，PAGEREF_RECLAIM和PAGEREF_RECLAIM_CLEAN表示可以尝试回收该页面。
