--- a/kernel/memory/13. 回收页面/1. LRU链表.md
+++ b/kernel/memory/13. 回收页面/1. LRU链表.md
@@ -203,3 +203,8 @@ static enum page_references page_check_references(struct page *page,
 ```
 
 在扫描不活跃LRU链表时，page_check_references()会被调用，返回值是一个page_references的枚举类型。PAGEREF_ACTIVATE表示该页面会迁移到活跃链表，PAGEREF_KEEP 表示会继续保留在不活跃链表中，PAGEREF_RECLAIM和PAGEREF_RECLAIM_CLEAN表示可以尝试回收该页面。
+
+第6行代码中的page_referenced()检查该页有多少个访问引用pte（referenced_ptes)。
+
+第7行代码中的TestClearPageReferenced()函数返回该页面PG_referenced标志位的值（referenced page)，并且清该标志位。
+
