--- a/kernel/memory/13. 回收页面/1. LRU链表.md
+++ b/kernel/memory/13. 回收页面/1. LRU链表.md
@@ -208,3 +208,10 @@ static enum page_references page_check_references(struct page *page,
 
 第7行代码中的TestClearPageReferenced()函数返回该页面PG_referenced标志位的值（referenced page)，并且清该标志位。
 
+接下来的代码根据访问引用pte的数目（referenced ptes变量）和PG_referenced标志位状态（referenced_page变量）来判断该页是留在活跃LRU、不活跃LRU，还是可以被回收。当该页有访问引用pte时，要被放回到活跃LRU链表中的情况如下。
+
+- 该页是匿名页面（PageSwapBacked(page)）。
+- 最近第二次访问的page cache 或共享的page cache。
+- 可执行文件的page cache。
+
+其余的有访问引用的页面将会继续保持在不活跃LRU链表中，最后剩下的页面就是可以回收页面的最佳候选者。
