--- a/kernel/memory/13. 回收页面/1. LRU链表.md
+++ b/kernel/memory/13. 回收页面/1. LRU链表.md
@@ -216,4 +216,30 @@ static enum page_references page_check_references(struct page *page,
 
 其余的有访问引用的页面将会继续保持在不活跃LRU链表中，最后剩下的页面就是可以回收页面的最佳候选者。
 
-第17~19行代码，如果有大量只访问一次的page cache充斥在活跃LRU链表中，那么在负载比较重的情况下，选择一个合适回收的候选者会变得越来越困难，并且引发分配内存的高延迟，将错误的页面换出。这里的设计是为了优化系统充斥着大量只使用一次的page cache页
+第17~19行代码，如果有大量只访问一次的page cache充斥在活跃LRU链表中，那么在负载比较重的情况下，选择一个合适回收的候选者会变得越来越困难，并且引发分配内存的高延迟，将错误的页面换出。这里的设计是为了优化系统充斥着大量只使用一次的page cache页面的情况（通常是mmap映射的文件访问），在这种情况下，只访问一次的page cache页面会大量涌入活跃LRU链表中，因为shrink_inactive_list()会把这些页面迁移到活跃链表，不利于页面回收。
+
+mmap映射的文件访问通常通过filemap_fault()函数来产生page cache，在Linux 2.6.29以后的版本中，这些page cache 将不会再调用mark_page_accessed()来设置PG_referenced。因此对于这种页面，第一次访问的状态是有访问引用pte，但是PG_referenced=0，所以扫描不活跃链表时设置该页为PG_referenced，并且继续保留在不活跃链表中而没有被放入活跃链表。
+
+在第二次访问时，发现有访问引用pte但PG_referenced=1，这时才把该页加入活跃链表中。因此利用PG_referenced做了一个page cache的访问次数的过滤器，过滤掉大量的短时间（多给了一个不活跃链表老化的时间）只访问一次的page cache。这群在内存短缺的情况下，kswapd就巧妙地释放了大量短时间只访问一次的page cache。这种大量只访问一次的page cache在不活跃LRU链表中多待一点时间，就越有利于在系统内存短缺时首先把它们释放了，否则这些页面跑到活跃LRU链表，再想把它们释放，那么要经历一个：
+
+```
+活跃LRU链表遍历时间+不活跃LRU链表遍历时间
+```
+
+第18行代码，“referenced_ptes>1”表示那些第一次在不活跃LRU链表中shared page cache，也就是说，如果有多个文件同时映射到该页面，它们应该晋升到活跃LRU链表中，因为它们应该多在LRU链表中一点时间，以便其他用户可以再次访问到。
+
+总结page_check _references()函数的主要作用如下。
+
+（1）如果有访问引用pte，那么：
+
+- 该页是匿名页面（PageSwapBacked(page)），则加入活跃链表
+- 最近第二次访问的page cache或shared page cache，则加入活跃链表；
+- 可执行文件的page cache，则加入活跃链表；
+- 除上述三种情况外，继续留在不活跃链表，例如第一次访问的page cache。
+
+（2）如果没有访问引用pte，则表示可以尝试回收它。
+
+
+
+## 5. page_referenced()
+
