--- a/kernel/memory/13. 回收页面/1. LRU链表.md
+++ b/kernel/memory/13. 回收页面/1. LRU链表.md
@@ -243,3 +243,9 @@ mmap映射的文件访问通常通过filemap_fault()函数来产生page cache，
 
 ## 5. page_referenced()
 
+下面来看page_referenced()函数的实现。
+
+```
+[page_check_references()->page_referenced()]
+```
+
