--- a/kernel/memory/13. 回收页面/1. LRU链表.md
+++ b/kernel/memory/13. 回收页面/1. LRU链表.md
@@ -247,5 +247,50 @@ mmap映射的文件访问通常通过filemap_fault()函数来产生page cache，
 
 ```
 [page_check_references()->page_referenced()]
+int page_referenced(struct page *page,
+		    int is_locked,
+		    struct mem_cgroup *memcg,
+		    unsigned long *vm_flags)
+{
+	int ret;
+	int we_locked = 0;
+	struct page_referenced_arg pra = {
+		.mapcount = page_mapcount(page),
+		.memcg = memcg,
+	};
+	struct rmap_walk_control rwc = {
+		.rmap_one = page_referenced_one,
+		.arg = (void *)&pra,
+		.anon_lock = page_lock_anon_vma_read,
+	};
+
+	*vm_flags = 0;
+	if (!page_mapped(page))
+		return 0;
+
+	if (!page_rmapping(page))
+		return 0;
+
+	if (!is_locked && (!PageAnon(page) || PageKsm(page))) {
+		we_locked = trylock_page(page);
+		if (!we_locked)
+			return 1;
+	}
+
+	ret = rmap_walk(page, &rwc);
+	*vm_flags = pra.vm_flags;
+
+	if (we_locked)
+		unlock_page(page);
+
+	return pra.referenced;
+}
+```
+
+page_referenced()函数判断 page是否被访问引用过，返回的访问引用pte的个数，即访问和引用（referenced）这个页面的用户进程空间虚拟页面的个数。核心思想是利用反向映射系统来统计访问引用pte的用户个数。第11行代码的rmap_walk_control数据结构中定义了rmap_one()函数指针。第18行代码，用page_mapped0判断 page->_mapcount引用计数是否大于等于0。第21行代码，用page_rmapping()判断page->mapping是否有地址空间映射。第39行代码，rmap_walk()遍历该页面所有映射的pte，然后调用rmap_one0函数。
+
+```
+[shrink_active_list()->page_referenced()->rmap_walk()->rmap_one()]
+
 ```
 
