--- a/kernel/memory/13. 回收页面/1. LRU链表.md
+++ b/kernel/memory/13. 回收页面/1. LRU链表.md
@@ -341,3 +341,5 @@ static int page_referenced_one(struct page *page, struct vm_area_struct *vma,
 回到刚才的问题，ARM Linux如何模拟这个Linux版本的L_PTE_YOUNG比特位呢？
 
 ARM32 Linux内核实现了两套页表，一套为了迎合Linux内核，一套为了ARM硬件。
+
+下面以匿名页面初次建立映射为例，来观察L_PTE_YOUNG比特位在何时第一次置位的？在do_brk()函数中，在新建一个VMA时会通过vm_get_page_prot()来建立VMA属性。
