--- a/kernel/memory/13. 回收页面/1. LRU链表.md
+++ b/kernel/memory/13. 回收页面/1. LRU链表.md
@@ -343,3 +343,41 @@ static int page_referenced_one(struct page *page, struct vm_area_struct *vma,
 ARM32 Linux内核实现了两套页表，一套为了迎合Linux内核，一套为了ARM硬件。
 
 下面以匿名页面初次建立映射为例，来观察L_PTE_YOUNG比特位在何时第一次置位的？在do_brk()函数中，在新建一个VMA时会通过vm_get_page_prot()来建立VMA属性。
+
+```
+static unsigned long do_brk(unsigned long addr, unsigned long len)
+{
+	....
+	vma->vm_start = addr;
+	vma->vm_end = addr + len;
+	vma->vm_page_prot = vm_get_page_prot(flags);
+	vma_link(mm, vma, prev, rb_link, rb_parent);
+	....
+	return addr;
+}
+
+pgprot_t vm_get_page_prot(unsigned long vm_flags)
+{
+	return __pgprot(pgprot_val(protection_map[vm_flags &
+				(VM_READ|VM_WRITE|VM_EXEC|VM_SHARED)]) |
+			pgprot_val(arch_vm_get_page_prot(vm_flags)));
+}
+```
+
+在vm_get_page_prot()函数中，重要的是通过VMA属性来转换成PTE页表项的属性，可以通过查表的方式来获取，protection_map[]定义了很多种属性组合，这些属性组合最终转换为PTE页表的相关比特位。
+
+```
+[arch/arm/include/asm/pgtable.h]
+#define _L_PTE_DEFAULT	L_PTE_PRESENT | L_PTE_YOUNG
+#define __PAGE_NONE		__pgprot(_L_PTE_DEFAULT | L_PTE_RDONLY | L_PTE_XN | L_PTE_NONE)
+#define __PAGE_SHARED		__pgprot(_L_PTE_DEFAULT | L_PTE_USER | L_PTE_XN)
+#define __PAGE_SHARED_EXEC	__pgprot(_L_PTE_DEFAULT | L_PTE_USER)
+#define __PAGE_COPY		__pgprot(_L_PTE_DEFAULT | L_PTE_USER | L_PTE_RDONLY | L_PTE_XN)
+#define __PAGE_COPY_EXEC	__pgprot(_L_PTE_DEFAULT | L_PTE_USER | L_PTE_RDONLY)
+#define __PAGE_READONLY		__pgprot(_L_PTE_DEFAULT | L_PTE_USER | L_PTE_RDONLY | L_PTE_XN)
+#define __PAGE_READONLY_EXEC	__pgprot(_L_PTE_DEFAULT | L_PTE_USER | L_PTE_RDONLY)
+```
+
+上述7种属性组合都会设置L_PTE_PRESENT|L_PTE_YOUNG这两个比特位到vma->vm_page_prot中。
+
+在匿名页面缺页中断处理中，会根据vma->vm_page_prot来生成一个新的PTE页面表项。
