--- a/kernel/memory/13. 回收页面/1. LRU链表.md
+++ b/kernel/memory/13. 回收页面/1. LRU链表.md
@@ -381,3 +381,57 @@ pgprot_t vm_get_page_prot(unsigned long vm_flags)
 上述7种属性组合都会设置L_PTE_PRESENT|L_PTE_YOUNG这两个比特位到vma->vm_page_prot中。
 
 在匿名页面缺页中断处理中，会根据vma->vm_page_prot来生成一个新的PTE页面表项。
+
+```
+static int do_anonymous_page(struct mm_struct *mm, struct vm_area_struct *vma,
+		unsigned long address, pte_t *page_table, pmd_t *pmd,
+		unsigned int flags)
+{
+	...
+	entry = mk_pte(page, vma->vm_page_prot);
+	...
+	set_pte_at(mm, address, page_table, entry);
+}
+```
+
+因此，当匿名页面第一次建立映射时，会设置L_PTE_PRESENT|L_PTE_YOUNG这两个比特位到Linux版本的页面表项中。
+
+当page_referenced()函数计算访问引用PTE的页面个数时，通过RMAP反向映射遍历每个PTE，然后调用ptep_clear_flush_young_notify()函数来检查每个PTE最近是否被访问过。
+
+```
+[page_referenced()->rmap_one()->page_referenced_one()]
+#define ptep_clear_flush_young_notify(__vma, __address, __ptep)		\
+({									\
+	int __young;							\
+	struct vm_area_struct *___vma = __vma;				\
+	unsigned long ___address = __address;				\
+	__young = ptep_clear_flush_young(___vma, ___address, __ptep);	\
+	__young |= mmu_notifier_clear_flush_young(___vma->vm_mm,	\
+						  ___address,		\
+						  ___address +		\
+							PAGE_SIZE);	\
+	__young;							\
+})
+```
+
+ptep_clear_flush_young_notify()宏的核心是调用ptep_test_and_clear_young()函数。
+
+```
+ptep_clear_flush_young_notify()->ptep_test_and_clear_young()
+static inline int
+ptep_test_and_clear_young (struct vm_area_struct *vma, unsigned long addr, pte_t *ptep)
+{
+#ifdef CONFIG_SMP
+	if (!pte_young(*ptep))
+		return 0;
+	return test_and_clear_bit(_PAGE_A_BIT, ptep);
+#else
+	pte_t pte = *ptep;
+	if (!pte_young(pte))
+		return 0;
+	set_pte_at(vma->vm_mm, addr, ptep, pte_mkold(pte));
+	return 1;
+#endif
+}
+```
+
