--- a/kernel/memory/13. 回收页面/1. LRU链表.md
+++ b/kernel/memory/13. 回收页面/1. LRU链表.md
@@ -441,3 +441,9 @@ static inline pte_t pte_mkold(pte_t pte)
 ```
 
 ptep_test and_clear_young()首先利用pte_young()宏来判断Linux版本的页表项中是否包含L_PTE_YOUNG比特位，如果没有设置该比特位，则返回0，表示映射PTE最近没有被访问引用过。如果L_PTE_YOUNG比特位置位，那么需要调用pte_mkold()宏来清这个比特位，然后调用set_pte_at()函数来写入ARM硬件页表。
+
+```
+[ptep_test_and_clear_young()->set_pte_at()->cpu_v7_set_pte_ext()]
+
+```
+
