--- a/kernel/memory/13. 回收页面/1. LRU链表.md
+++ b/kernel/memory/13. 回收页面/1. LRU链表.md
@@ -534,3 +534,52 @@ unlock:
 - 利用RMAP系统遍历所有映射该页面的pte。
 - 对于每个pte，如果L_PTE_YOUNG比特位置位，说明之前被访问过，referenced计数加1。然后清空L_PTE_YOUNG比特位，对于ARM32处理器来说，会清空硬件页表项内容，人为制造一个缺页中断，当再次访问该pte时，在缺页中断中设置L_PTE_YOUNG比特位。
 - 返回referenced计数，表示该页有多少个访问引用pte。
+
+## 6. 例子
+
+以用户进程读文件为例来说明第二次机会法。从用户空间的读函数到内核VFS层的vfs_read()，透过文件系统之后，调用read方法的通用函数do_generic_file_read()，第一次读和第二次读的情况如下。
+
+```
+第一次读：
+    do_generic_file_read()->page_cache_sync_readahead()->do_page_cache_readahead()->read_pages()->add_to_page_cache_1ru()把该页清PG_active且添加到 不活跃链表中，PG_active=0
+  	do_generic_file_read()->mark_page_accessed()因为PG_referenced==0,设置PG_referenced=1
+
+第二次读：
+	do_generic_file_read()->mark_page_accessed()因为（PG_referenced==1&& PG_active==0), =>置PG_active=1，PG_referenced=0,把该页从不活跃链表加入活跃链表。
+```
+
+从上述读文件的例子可以看到，page cache 从不活跃链表加入到活跃链表，需要mark_page_accessed()两次。
+
+下面以另外一个常见的读取文件内容的方式mmap为例，来看page cache在LRU链表中的表现，假设文件系统是ext4。
+
+```
+（1）第一次读，即建立mmap映射时：
+    mmap文件->ext4_file_mmap()->filemap_fault():
+    ->do_sync_mmap_readahead()->ra_submit()->read_pages()->ext4_readpages()->mpage _readpages()->add_to_page_cache_1ru() 把页面加入到不活跃文件LRU链表中，然后PG active=0 && PG referenced=0
+
+（2）后续的读写和直接读写内存一样，没有设置PG_active 和pG_referenced标志位。
+（3）kswapd第一次扫描：
+    当kswapd内核线程第一次扫描不活跃文件LRU链表时，shrink_inactive_list()->shrink_page_list()->page_check_references()检查到这个page cache页面有映射PTE且PG_referenced=0，然后设置PG_referenced=1，并且继续保留在不活跃链表中。
+（4）kswapd第二次扫描：
+    当kswapd内核线程第二次扫描不活跃文件LRU链表时，page_check_references()检查到page cache页面有映射PTE且PG_referenced=1,则将其迁移到活跃链表中。
+```
+
+下面来看从LRU链表换出页面的情况。
+
+```
+	（1）第一次扫描活跃链表：shrink_active_list()->page_referenced()。>这里基本上会把有访问引用pte的和没有访问引用pte的页都加入到不活跃链表中。
+    （2）第二次扫描不活跃链表：shrink_inactive_list()->page_check_references()读取该页的PG referenced并且清PG referenced.
+    =>如果该页没有访问引用pte，回收的最佳候选者。
+    =>如果该页有访问引用pte的情况，需要具体问题具体分析。
+```
+
+原来的内核设计是在扫描活跃LRU链表时，如果该页有访问引用pte，将会被重新加入活跃链表头。但是这样做，会导致一些可扩展性的问题。原来的内核设计中，假设一个匿名页面刚加入活跃LRU链表且PG_referenced=1，如果要把该页来换出，则：
+
+- 需要在活跃LRU链表从头部到尾部的一次移动过程，假设时间为T1，然后清PG_referenced,该页又重新加入活跃LRU链表。
+- 在活跃链表中再移动一次的时间是T2，然后检查PG_referenced是否为0，若为0才能加入不活跃匿名LRU链表。
+- 移动一次不活跃LRU链表的时间为T3，才能把该页换出。
+- 因此该页从加入活跃LRU链表到被换出需要的时间为T1+T2+T3。
+
+超级大系统中会有好几百万个匿名页面，移动一次LRU链表时间是非常长的，而且不是完全必要的。因此在Linux2.6.28内核中对此做了优化，允许一部分活跃页面在不活跃LRU链表中，shrink_active_list()函数把有访问引用pte的页面也加入到不活跃LRU中。扫描不活跃页面LRU时，如果发现匿名页面有访问引用pte，则再将该页面迁移回到活跃LRU中。
+
+上述提到的一些优化问题都是社区中的专家在大量实验中发现并加以调整和优化的，值得深入学习和理解，读者可以阅读完本章内容之后再回头来仔细推敲。
