--- a/kernel/memory/13. 回收页面/2. kswapd内核线程.md
+++ b/kernel/memory/13. 回收页面/2. kswapd内核线程.md
@@ -113,3 +113,119 @@ void wakeup_kswapd(struct zone *zone, int order, enum zone_type classzone_idx)
 这里需要赋值kswapd_max_order和classzone_idx。这两个参数会传递到kswapd内核线程中。
 
 classzone_idx 是理解页面分配器和页面回收kswapd内核线程之间如何协同工作的一个关键点。
+
+假设以GFP_HIGHUSER_MOVABLE为分配掩码分配内存，以在_alloc_pages_nodemask()->first_zones_zonelist()中计算出来的preferred_zone为ZONE_HIGHMEM，那么 ac.classzone_idx的值为1，详见第2.4.1节。当内存分配失败时，页面分配器会唤醒 kswapd 内核线程，并且传递ac.claszone_idx值到kswapd内核线程，最后传递给balance_pgdat() 函数的classzone_idx参数。
+
+```
+struct page *
+__alloc_pages_nodemask(gfp_t gfp_mask, unsigned int order,
+{
+	...
+	struct alloc_context ac = {
+		.high_zoneidx = gfp_zone(gfp_mask),
+		.nodemask = nodemask,
+		.migratetype = gfpflags_to_migratetype(gfp_mask),
+	};
+	...
+	ac.zonelist = zonelist;
+	preferred_zoneref = first_zones_zonelist(ac.zonelist, ac.high_zoneidx,
+				ac.nodemask ? : &cpuset_current_mems_allowed,
+				&ac.preferred_zone);
+	ac.classzone_idx = zonelist_zone_idx(preferred_zoneref);
+	...
+}
+static inline struct page *
+__alloc_pages_slowpath(gfp_t gfp_mask, unsigned int order,
+						struct alloc_context *ac)
+{
+....
+retry:
+	if (!(gfp_mask & __GFP_NO_KSWAPD))
+		wake_all_kswapds(order, ac);
+....
+}
+```
+
+kswapd内核线程的执行函数如下：
+
+```
+static int kswapd(void *p)
+{
+	unsigned long order, new_order;
+	unsigned balanced_order;
+	int classzone_idx, new_classzone_idx;
+	int balanced_classzone_idx;
+	pg_data_t *pgdat = (pg_data_t*)p;
+	struct task_struct *tsk = current;
+	order = new_order = 0;
+	balanced_order = 0;
+	classzone_idx = new_classzone_idx = pgdat->nr_zones - 1;
+	balanced_classzone_idx = classzone_idx;
+	for ( ; ; ) {
+		bool ret;
+
+		/*
+		 * If the last balance_pgdat was unsuccessful it's unlikely a
+		 * new request of a similar or harder type will succeed soon
+		 * so consider going to sleep on the basis we reclaimed at
+		 */
+		if (balanced_classzone_idx >= new_classzone_idx &&
+					balanced_order == new_order) {
+			new_order = pgdat->kswapd_max_order;
+			new_classzone_idx = pgdat->classzone_idx;
+			pgdat->kswapd_max_order =  0;
+			pgdat->classzone_idx = pgdat->nr_zones - 1;
+		}
+
+		if (order < new_order || classzone_idx > new_classzone_idx) {
+			/*
+			 * Don't sleep if someone wants a larger 'order'
+			 * allocation or has tigher zone constraints
+			 */
+			order = new_order;
+			classzone_idx = new_classzone_idx;
+		} else {
+			kswapd_try_to_sleep(pgdat, balanced_order,
+						balanced_classzone_idx);	//系统启动时会在kswapd_try_to _sleep()函数中睡眠并且让出CPU控制权。
+			order = pgdat->kswapd_max_order;
+			classzone_idx = pgdat->classzone_idx;
+			new_order = order;
+			new_classzone_idx = classzone_idx;
+			pgdat->kswapd_max_order = 0;
+			pgdat->classzone_idx = pgdat->nr_zones - 1;
+		}
+
+		ret = try_to_freeze();
+		if (kthread_should_stop())
+			break;
+
+		/*
+		 * We can speed up thawing tasks if we don't call balance_pgdat
+		 * after returning from the refrigerator
+		 */
+		if (!ret) {
+			trace_mm_vmscan_kswapd_wake(pgdat->node_id, order);
+			balanced_classzone_idx = classzone_idx;
+			balanced_order = balance_pgdat(pgdat, order,
+						&balanced_classzone_idx);
+		}
+	}
+	
+	tsk->flags &= ~(PF_MEMALLOC | PF_SWAPWRITE | PF_KSWAPD);
+	...
+	return 0;
+}
+```
+
+函数的核心部分集中在上述代码的for循环中。这里有很多的局部变量来控制程序的走向，其中最重要的变量是在前文介绍过的kswapd_max_order和classzone_idx。当系统内存紧张时，例如alloc_pages()在低水位（ALLOC_WMARK_LOW）中无法分配出内存，这时分配内存函数会调用wakeup_kswapd()来唤醒kswapd内核线程。kswapd内核线程初始化时会在kswapd_try_to_sleep()函数中睡眠，唤醒点在kswapd_try_to_sleepO函数中。kswapd内核线程被唤醒之后，调用balance_pgdat()来回收页面。调用逻辑如下：
+
+```
+alloc_pages:
+    __alloc_pages_nodemask() 
+    ->If fail on ALLOC_WMARK_LOW 
+    ->alloc_pages_slowpath() 
+    ->wakeup_kswapd() 
+    ->wake_up(kswapd_wait) 
+    	kswapd内核线程被唤醒 ->balance pgdat()
+```
+
