--- a/kernel/memory/13. 回收页面/3. balance_pgdat函数.md
+++ b/kernel/memory/13. 回收页面/3. balance_pgdat函数.md
@@ -135,3 +135,45 @@ static bool pgdat_balanced(pg_data_t *pgdat, int order, int classzone_idx)
 ```
 
 注意参数classzone_idx是由页面分配路径上传递过来的。pgdat_balanced()判断一个内存节点上的物理页面是否处于平衡状态，返回true，则表示该内存节点处于平衡状态。注意第7行代码，遍历从最低端的zone到classzone_idx的页面是否处于平衡状态。
+
+对于order为0的情况，所有的zone都是平衡的。对于order大于0的内存分配，需要统计从最低端zone到classzone_idx zone中所有处于平衡状态zone的页面数量（balanced_pages），当大于这个节点的所有管理的页面managed_pages的25%，那么就认为这个内存节点已处于平衡状态。如果这个zone的空闲页面高于WMARK_HIGH水位，那么这个zone所有管理的页面可以看作balanced pages。zone_balanced()函数用于判断zone的空闲页面是否处于WMARK_HIGH水位之上，返回true，则表示zone处于WMARK_HIGH之上。
+
+```
+[pgdat_balanced()->zone_balanced()]
+static bool zone_balanced(struct zone *zone, int order,
+			  unsigned long balance_gap, int classzone_idx)
+{
+	if (!zone_watermark_ok_safe(zone, order, high_wmark_pages(zone) +
+				    balance_gap, classzone_idx, 0))
+		return false;
+
+	if (IS_ENABLED(CONFIG_COMPACTION) && order && compaction_suitable(zone,
+				order, 0, classzone_idx) == COMPACT_SKIPPED)
+		return false;
+
+	return true;
+}
+
+bool zone_watermark_ok_safe(struct zone *z, unsigned int order,
+			unsigned long mark, int classzone_idx, int alloc_flags)
+{
+	long free_pages = zone_page_state(z, NR_FREE_PAGES);
+
+	if (z->percpu_drift_mark && free_pages < z->percpu_drift_mark)
+		free_pages = zone_page_state_snapshot(z, NR_FREE_PAGES);
+
+	return __zone_watermark_ok(z, order, mark, classzone_idx, alloc_flags,
+								free_pages);
+}
+```
+
+页面分配路径page allocator和页面回收路径kswapd之间有很多交互的地方，如图2.28所示，总结如下。
+
+![页面分配路径和页面回收路径](picture/页面分配路径和页面回收路径.png)
+
+- 当页面分配路径page allocator 在低水位中分配内存失败时，会唤醒kswapd内核线程，把order和preferred_zone传递给kswapd，这两个参数是它们之间联系的纽带。
+- 页面分配路径page allocator 和页面回收路径kswapd在扫描zone时的方向是相反的，页面分配路径page allocator 从ZONE_HIGHMEM往ZONE_NORMAL方向扫描zone，kswapd则相反。
+- 如何判断kswapd应该停止页面回收呢?一个重要的条件是从zone_normal到preferred_zone处于平衡状态时，那么就认为这个内存节点处于平衡状态，可以停止页面回收。
+- 页面分配路径page allocator和页面回收路径kswapd采用zone的水位标不同，pagealocator 采用低水位，即在低水位中无法分配内存，就唤醒kswapd；而kswapd判断是否停止页面回收采用的高水位。这两个标准的差别会导致一些问题，例如一个内存节点zone之间页面的老化速度不一致，为此内核提供了很多诡异的补丁，在后续章节会继续探讨。
+
+上述内容是从整体角度来观察balance_pgdat()函数的实现框架，下面继续深入探讨该函数。
