--- a/kernel/memory/13. 回收页面/3. balance_pgdat函数.md
+++ b/kernel/memory/13. 回收页面/3. balance_pgdat函数.md
@@ -177,3 +177,105 @@ bool zone_watermark_ok_safe(struct zone *z, unsigned int order,
 - 页面分配路径page allocator和页面回收路径kswapd采用zone的水位标不同，pagealocator 采用低水位，即在低水位中无法分配内存，就唤醒kswapd；而kswapd判断是否停止页面回收采用的高水位。这两个标准的差别会导致一些问题，例如一个内存节点zone之间页面的老化速度不一致，为此内核提供了很多诡异的补丁，在后续章节会继续探讨。
 
 上述内容是从整体角度来观察balance_pgdat()函数的实现框架，下面继续深入探讨该函数。
+
+```
+[kswapd()->balance_pgdat()]
+static unsigned long balance_pgdat(pg_data_t *pgdat, int order,
+							int *classzone_idx)
+{
+	int i;
+	int end_zone = 0;	/* Inclusive.  0 = ZONE_DMA */
+	unsigned long nr_soft_reclaimed;
+	unsigned long nr_soft_scanned;
+	struct scan_control sc = {
+		.gfp_mask = GFP_KERNEL,
+		.order = order,
+		.priority = DEF_PRIORITY,
+		.may_writepage = !laptop_mode,
+		.may_unmap = 1,
+		.may_swap = 1,
+	};
+	count_vm_event(PAGEOUTRUN);
+
+	do {
+		unsigned long nr_attempted = 0;
+		bool raise_priority = true;
+		bool pgdat_needs_compaction = (order > 0);
+
+		sc.nr_reclaimed = 0;
+
+		/*
+		 * Scan in the highmem->dma direction for the highest
+		 * zone which needs scanning
+		 */
+		 //从ZONE_HIGHEM->ZONE_NORMAL的方向对zone进行扫描，直到找出第一个不平衡的zone，即水位处于WMARK_HIGH之下的zone为止。
+		for (i = pgdat->nr_zones - 1; i >= 0; i--) {
+			struct zone *zone = pgdat->node_zones + i;
+
+			if (!populated_zone(zone))
+				continue;
+
+			if (sc.priority != DEF_PRIORITY &&
+			    !zone_reclaimable(zone))
+				continue;
+
+			/*
+			 * Do some background aging of the anon list, to give
+			 * pages a chance to be referenced before reclaiming.
+			 */
+			age_active_anon(zone, &sc);
+
+			/*
+			 * If the number of buffer_heads in the machine
+			 * exceeds the maximum allowed level and this node
+			 * has a highmem zone, force kswapd to reclaim from
+			 * it to relieve lowmem pressure.
+			 */
+			if (buffer_heads_over_limit && is_highmem_idx(i)) {
+				end_zone = i;
+				break;
+			}
+			//同样使用zone_balanced()函数来计算zone是否处于WMARK_HIGH水位之上，找到之后保存到end_zone变量中。
+			if (!zone_balanced(zone, order, 0, 0)) {
+				end_zone = i;
+				break;
+			} else {
+				/*
+				 * If balanced, clear the dirty and congested
+				 * flags
+				 */
+				clear_bit(ZONE_CONGESTED, &zone->flags);
+				clear_bit(ZONE_DIRTY, &zone->flags);
+			}
+		}
+
+		if (i < 0)
+			goto out;
+			
+		for (i = 0; i <= end_zone; i++) {
+			struct zone *zone = pgdat->node_zones + i;
+
+			if (!populated_zone(zone))
+				continue;
+
+			/*
+			 * If any zone is currently balanced then kswapd will
+			 * not call compaction as it is expected that the
+			 * necessary pages are already available.
+			 */
+			if (pgdat_needs_compaction &&
+					zone_watermark_ok(zone, order,
+						low_wmark_pages(zone),
+						*classzone_idx, 0))
+				pgdat_needs_compaction = false;
+		}
+
+		/*
+		 * If we're getting trouble reclaiming, start doing writepage
+		 * even in laptop mode.
+		 */
+		if (sc.priority < DEF_PRIORITY - 2)
+			sc.may_writepage = 1;
+
+```
+
