--- a/kernel/memory/13. 回收页面/3. balance_pgdat函数.md
+++ b/kernel/memory/13. 回收页面/3. balance_pgdat函数.md
@@ -251,7 +251,7 @@ static unsigned long balance_pgdat(pg_data_t *pgdat, int order,
 
 		if (i < 0)
 			goto out;
-			
+		//这段代码的for循环，是沿着normal zone到刚才的找到的end_zone 的方向进行扫描。	
 		for (i = 0; i <= end_zone; i++) {
 			struct zone *zone = pgdat->node_zones + i;
 
@@ -263,6 +263,7 @@ static unsigned long balance_pgdat(pg_data_t *pgdat, int order,
 			 * not call compaction as it is expected that the
 			 * necessary pages are already available.
 			 */
+			 //判断是否需要内存规整，当order大于0且当前zone处于WMARK_LOW水位之上，则不需要内存规整
 			if (pgdat_needs_compaction &&
 					zone_watermark_ok(zone, order,
 						low_wmark_pages(zone),
@@ -276,6 +277,89 @@ static unsigned long balance_pgdat(pg_data_t *pgdat, int order,
 		 */
 		if (sc.priority < DEF_PRIORITY - 2)
 			sc.may_writepage = 1;
+		
+		
+		/*
+		 * Now scan the zone in the dma->highmem direction, stopping
+		 * at the last zone which needs scanning.
+		 *
+		 * We do this because the page allocator works in the opposite
+		 * direction.  This prevents the page allocator from allocating
+		 * pages behind kswapd's direction of progress, which would
+		 * cause too much scanning of the lower zones.
+		 */
+		 //第三个for循环，方向依然是ZONE_NORMAL到end_zone，为什么要从ZONE_NORMAL到end_zone的方向回收呢？因为伙伴分配系统是从ZONE_HIGHMEM到ZONE_NORMAL的方向，恰好和回收页面的方向相反，这样有利于减少对锁的争用。提高效率。
+		for (i = 0; i <= end_zone; i++) {
+			struct zone *zone = pgdat->node_zones + i;
 
+			if (!populated_zone(zone))
+				continue;
+
+			if (sc.priority != DEF_PRIORITY &&
+			    !zone_reclaimable(zone))
+				continue;
+
+			sc.nr_scanned = 0;
+
+			nr_soft_scanned = 0;
+			/*
+			 * Call soft limit reclaim before calling shrink_zone.
+			 */
+			nr_soft_reclaimed = mem_cgroup_soft_limit_reclaim(zone,
+							order, sc.gfp_mask,
+							&nr_soft_scanned);
+			sc.nr_reclaimed += nr_soft_reclaimed;
+
+			/*
+			 * There should be no need to raise the scanning
+			 * priority if enough pages are already being scanned
+			 * that that high watermark would be met at 100%
+			 * efficiency.
+			 */
+			 //kswapd_shrink_zone()函数是真正的扫描和页面回收函数，扫描的参数和结果存放在struct scan_control sc中。kswapd_shrink_zone()返回true则表明已经回收了所需要的页面，且不需要再提高扫描优先级。
+			if (kswapd_shrink_zone(zone, end_zone,
+					       &sc, &nr_attempted))
+				raise_priority = false;
+		}
+
+		/*
+		 * If the low watermark is met there is no need for processes
+		 * to be throttled on pfmemalloc_wait as they should not be
+		 * able to safely make forward progress. Wake them
+		 */
+		if (waitqueue_active(&pgdat->pfmemalloc_wait) &&
+				pfmemalloc_watermark_ok(pgdat))
+			wake_up_all(&pgdat->pfmemalloc_wait);
+
+		/*
+		 * Fragmentation may mean that the system cannot be rebalanced
+		 * for high-order allocations in all zones. If twice the
+		 * allocation size has been reclaimed and the zones are still
+		 * not balanced then recheck the watermarks at order-0 to
+		 * prevent kswapd reclaiming excessively. Assume that a
+		 * process requested a high-order can direct reclaim/compact.
+		 */
+		if (order && sc.nr_reclaimed >= 2UL << order)
+			order = sc.order = 0;
+
+		/* Check if kswapd should be suspending */
+		if (try_to_freeze() || kthread_should_stop())
+			break;
+
+		/*
+		 * Compact if necessary and kswapd is reclaiming at least the
+		 * high watermark number of pages as requsted
+		 */
+		if (pgdat_needs_compaction && sc.nr_reclaimed > nr_attempted)
+			compact_pgdat(pgdat, order);
+
+		/*
+		 * Raise priority if scanning rate is too low or there was no
+		 * progress in reclaiming pages
+		 */
+		if (raise_priority || !sc.nr_reclaimed)
+			sc.priority--;
+		} while (sc.priority >= 1 &&
+		 !pgdat_balanced(pgdat, order, *classzone_idx));
 ```
 
