--- a/kernel/memory/13. 回收页面/3. balance_pgdat函数.md
+++ b/kernel/memory/13. 回收页面/3. balance_pgdat函数.md
@@ -339,10 +339,12 @@ static unsigned long balance_pgdat(pg_data_t *pgdat, int order,
 		 * prevent kswapd reclaiming excessively. Assume that a
 		 * process requested a high-order can direct reclaim/compact.
 		 */
+		//sc.nr_reclaimed表示已经成功回收页面的数量，如果已经回收的页面大于2^order，为了避免页面碎片，这里设置order为0，以防止kswapd内核线程过于激进的回收。因为假设没有这一行的代码判断，并且回收了2^order个页面后pgdat_balanced()函数还是没有发现内存节点没有达到平衡状态，那么它会循环下去，知道sc.priority <= 0为止。注意要退出扫描，还需要判断当前内存节点
 		if (order && sc.nr_reclaimed >= 2UL << order)
 			order = sc.order = 0;
 
 		/* Check if kswapd should be suspending */
+		//判断kswapd内核线程是否要停止或者睡眠
 		if (try_to_freeze() || kthread_should_stop())
 			break;
 
@@ -350,6 +352,7 @@ static unsigned long balance_pgdat(pg_data_t *pgdat, int order,
 		 * Compact if necessary and kswapd is reclaiming at least the
 		 * high watermark number of pages as requsted
 		 */
+		 //判断是否需要对这个内存节点进行内存规整，优化内存碎片
 		if (pgdat_needs_compaction && sc.nr_reclaimed > nr_attempted)
 			compact_pgdat(pgdat, order);
 
@@ -357,9 +360,82 @@ static unsigned long balance_pgdat(pg_data_t *pgdat, int order,
 		 * Raise priority if scanning rate is too low or there was no
 		 * progress in reclaiming pages
 		 */
+		 //判断是否需要提高扫描的优先级和扫描粒度。变量raise_priority默认为true，当kswapd_shrink_zone()函数返回true，即成功回收了页面时，才会把raise_priority设置为false。如果扫描一轮后没有一个页面被回收释放，那也需要提高优先级来增加扫描页面的强度。
 		if (raise_priority || !sc.nr_reclaimed)
 			sc.priority--;
 		} while (sc.priority >= 1 &&
 		 !pgdat_balanced(pgdat, order, *classzone_idx));
 ```
+
+前文讲述了从ZONE_NORMAL到end_zone扫描和回收一遍页面后判断是否已经满足页面回收的要求，是否需要继续扫描pgdat_balanced()以及加大扫描粒度（sc.priority）等。
+
+下面来看kswapd_shrink_zone()函数的实现。
+
+```
+static bool kswapd_shrink_zone(struct zone *zone,
+			       int classzone_idx,
+			       struct scan_control *sc,
+			       unsigned long *nr_attempted)
+{
+	int testorder = sc->order;
+	unsigned long balance_gap;
+	bool lowmem_pressure;
+
+	/* Reclaim above the high watermark. */
+	
+	sc->nr_to_reclaim = max(SWAP_CLUSTER_MAX, high_wmark_pages(zone));
+
+	/*
+	 * Kswapd reclaims only single pages with compaction enabled. Trying
+	 * too hard to reclaim until contiguous free pages have become
+	 * available can hurt performance by evicting too much useful data
+	 * from memory. Do not reclaim more than needed for compaction.
+	 */
+	if (IS_ENABLED(CONFIG_COMPACTION) && sc->order &&
+			compaction_suitable(zone, sc->order, 0, classzone_idx)
+							!= COMPACT_SKIPPED)
+		testorder = 0;
+
+	/*
+	 * We put equal pressure on every zone, unless one zone has way too
+	 * many pages free already. The "too many pages" is defined as the
+	 * high wmark plus a "gap" where the gap is either the low
+	 * watermark or 1% of the zone, whichever is smaller.
+	 */
+	balance_gap = min(low_wmark_pages(zone), DIV_ROUND_UP(
+			zone->managed_pages, KSWAPD_ZONE_BALANCE_GAP_RATIO));
+
+	/*
+	 * If there is no low memory pressure or the zone is balanced then no
+	 * reclaim is necessary
+	 */
+	lowmem_pressure = (buffer_heads_over_limit && is_highmem(zone));
+	if (!lowmem_pressure && zone_balanced(zone, testorder,
+						balance_gap, classzone_idx))
+		return true;
+
+	shrink_zone(zone, sc, zone_idx(zone) == classzone_idx);
+
+	/* Account for the number of pages attempted to reclaim */
+	*nr_attempted += sc->nr_to_reclaim;
+
+	clear_bit(ZONE_WRITEBACK, &zone->flags);
+
+	/*
+	 * If a zone reaches its high watermark, consider it to be no longer
+	 * congested. It's possible there are dirty pages backed by congested
+	 * BDIs but as pressure is relieved, speculatively avoid congestion
+	 * waits.
+	 */
+	if (zone_reclaimable(zone) &&
+	    zone_balanced(zone, testorder, 0, classzone_idx)) {
+		clear_bit(ZONE_CONGESTED, &zone->flags);
+		clear_bit(ZONE_DIRTY, &zone->flags);
+	}
+
+	return sc->nr_scanned >= sc->nr_to_reclaim;
+}
+```
+
+
 
