--- a/kernel/memory/13. 回收页面/3. balance_pgdat函数.md
+++ b/kernel/memory/13. 回收页面/3. balance_pgdat函数.md
@@ -382,7 +382,7 @@ static bool kswapd_shrink_zone(struct zone *zone,
 	bool lowmem_pressure;
 
 	/* Reclaim above the high watermark. */
-	
+	//计算一轮扫描最多回收的页面sc->nr_to_reclaim个数。SWAP_CLUSTER_MAX宏定义为32个页面，high_wmark_pages()宏表示预期需要最多回收多少个页面才能达到WMARKHIGH水位，这里比较两者取其最大值。这里会使用到zone->watermark[WMARK_HIGH]变量，WMARK_HIGH水位值的计算是在_setup_per_zone_wmarks()函数中，通过min_free_kbytes和zone管理的页面数等参数计算得出。
 	sc->nr_to_reclaim = max(SWAP_CLUSTER_MAX, high_wmark_pages(zone));
 
 	/*
