--- a/kernel/memory/13. 回收页面/3. balance_pgdat函数.md
+++ b/kernel/memory/13. 回收页面/3. balance_pgdat函数.md
@@ -402,6 +402,7 @@ static bool kswapd_shrink_zone(struct zone *zone,
 	 * high wmark plus a "gap" where the gap is either the low
 	 * watermark or 1% of the zone, whichever is smaller.
 	 */
+	 //balance_gap相当于在判断zone是否处于平衡状态时增加了些难度，原来只要判断空闲页面是否超过了高水位WMARKHIGH即可，现在需要判断是否超过（WMARKHIGH+balance_gap)。balance_gap值比较小，一般取低水位值或zone管理页面的1%。
 	balance_gap = min(low_wmark_pages(zone), DIV_ROUND_UP(
 			zone->managed_pages, KSWAPD_ZONE_BALANCE_GAP_RATIO));
 
@@ -409,11 +410,12 @@ static bool kswapd_shrink_zone(struct zone *zone,
 	 * If there is no low memory pressure or the zone is balanced then no
 	 * reclaim is necessary
 	 */
+	 //在调用shrink_zone()函数前，需要判断当前zone的页面是否处于平衡状态，即当前水位是否已经高于WMARK_HIGH+balance_gap。如果已经处于平衡状态，那么不需要执行页面回收，直接返回即可。这里还考虑了buffer_head的使用情况，buffer_heads_over_limit全局变量定义在fs/buffer.c文件中，我们暂时先不考虑它。
 	lowmem_pressure = (buffer_heads_over_limit && is_highmem(zone));
 	if (!lowmem_pressure && zone_balanced(zone, testorder,
 						balance_gap, classzone_idx))
 		return true;
-
+	//shrink_zone()函数去尝试回收zone的页面，它是kswapd内核线程的核心函数，后续会继续介绍这个函数。
 	shrink_zone(zone, sc, zone_idx(zone) == classzone_idx);
 
 	/* Account for the number of pages attempted to reclaim */
@@ -427,6 +429,7 @@ static bool kswapd_shrink_zone(struct zone *zone,
 	 * BDIs but as pressure is relieved, speculatively avoid congestion
 	 * waits.
 	 */
+	 //shrink_zone完成之后继续判断当前zone是否处于平衡状态，如果处于平衡状态，则可以不考虑block层的堵塞问题（congest)，即使还有一些页面处于回写状态也是可以控制的，清除ZONE_CONGESTED比特位。
 	if (zone_reclaimable(zone) &&
 	    zone_balanced(zone, testorder, 0, classzone_idx)) {
 		clear_bit(ZONE_CONGESTED, &zone->flags);
@@ -437,5 +440,5 @@ static bool kswapd_shrink_zone(struct zone *zone,
 }
 ```
 
-
+最后，如果扫描的页面数量（sc->nr_scanned）大于等于扫描目标（sc->nr_to reclaim)的话表示扫描了足够多的页面，则该函数返回true。扫描了足够多的页面，也有可能一无所获。kswapd_shrink_zone()函数除了上面说的情况会返回true以外，当zone处于平衡状态时也会返回true，返回true只会影响balance_pgdat()函数的扫描粒度。
 
