--- a/kernel/memory/13. 回收页面/4. shrink_zone函数.md
+++ b/kernel/memory/13. 回收页面/4. shrink_zone函数.md
@@ -351,3 +351,28 @@ static unsigned long shrink_list(enum lru_list lru, unsigned long nr_to_scan,
 }
 ```
 
+看看inactive_list_is_low()函数：
+
+```
+[inactive_list_is_low()->inactive_anon_is_low()->inactive_anon_is_low_global()]
+static int inactive_anon_is_low_global(struct zone *zone)
+{
+	unsigned long active, inactive;
+
+	active = zone_page_state(zone, NR_ACTIVE_ANON);
+	inactive = zone_page_state(zone, NR_INACTIVE_ANON);
+
+	if (inactive * zone->inactive_ratio < active)
+		return 1;
+
+	return 0;
+}
+```
+
+为什么活跃LRU链表页面的数量少于不活跃LRU时，不去扫描活跃LRU呢？
+
+系统常常会有只使用一次的文件访问（use-once streamingIO)的情况，不活跃LRU链表增长速度变快，不活跃LRU页面数量大于活跃页面数量，这时不会去扫描活跃LRU。
+
+判断文件映射链表相对简单，直接比较活跃和不活跃链表页面的数量即可。对于匿名页面，zone数据结构中有一个inactive_ratio成员，inactive_ratio的计算在mm/page_alloc.c文件中的calculate_zone_inactive_ratio()函数里，对于zone的内存空间小于1GB的情况，通常inactive_ratio为1，1GB~10GB的inactive-ratio为3。inactive ratio为3，表示在LRU中活跃匿名页面和不活跃匿名页面的比值为3：1，也就是说在理想状态下有25%的页面保存在不活跃链表中。匿名页面的不活跃链表有些奇怪，一方面我们需要它越短越好，这样页面回收机制可以少做点事情，但是另一方面，如果匿名页面的不活跃链表比较长，在这个链表的页面会有比较长的时间有机会被再次访问到。
+
+shrink_inactive _list()函数扫描不活跃页面链表并且回收页面，后文中会详细介绍该函数。
